Resolve #583
This kinda resolves the issue but not in a very graceful way.  It means any numbered items > 99 will still be cropped.

The problem is due to no padding/margin and then needing to specify margin.

you can replicate this bug with

```
<body style="padding:0; margin:0">
<style type="text/css">
li:nth-child(n+10){
  margin-left:1.6em;
}
</style>
<ol style="list-style-type: decimal;margin-left:1.5em;padding:0;">
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>
  <li>
  1
  </li>




</ol>
</body>
```

--- a/src/static/css/iframe_editor.css
+++ b/src/static/css/iframe_editor.css
@@ -1,4 +1,3 @@
-
 /* These CSS rules are included in both the outer and inner ACE iframe.
    Also see inner.css, included only in the inner one.
 */
@@ -39,7 +38,7 @@ ul.list-bullet6 { list-style-type: square; }
 ul.list-bullet7 { list-style-type: disc; }
 ul.list-bullet8 { list-style-type: circle; }
 
-ol.list-number1 { margin-left: 1.5em; }
+ol.list-number1 { margin-left: 1.9em; }
 ol.list-number2 { margin-left: 3em; }
 ol.list-number3 { margin-left: 4.5em; }
 ol.list-number4 { margin-left: 6em; }
